# chess

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: go.rs  perft.rs
src/: lib.rs
tests/: perft.rs
