[package]
name = "chess"
version = "0.1.0"
description = "a UCI Chess Engine"
repository = "https://github.com/thismarvin/chess"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
console_error_panic_hook = { version = "0.1.7", optional = true }
bitflags = "1.3.2"

[dev-dependencies]
criterion = "0.3.5"
wasm-bindgen-test = "0.3.28"

[profile.release]
debug = true

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "go"
harness = false
